--- a/Arcanum.UI/Components/Styles/Base/BaseMenuItemStyle.xaml
+++ b/Arcanum.UI/Components/Styles/Base/BaseMenuItemStyle.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns = "http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:userControls = "clr-namespace:Arcanum.UI.Components.UserControls">
 
     <MenuScrollingVisibilityConverter x:Key = "MenuScrollingVisibilityConverter" />
     <Geometry x:Key = "DownArrow"> M 0,0 L 3.5,4 L 7,0 Z </Geometry>
@@ -581,6 +582,19 @@
                      Value = "SubmenuHeader">
                 <Setter Property = "Template"
                         Value = "{DynamicResource {ComponentResourceKey ResourceId=SubmenuHeaderTemplateKey, TypeInTargetAssembly={x:Type MenuItem}}}" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+    
+    
+    <Style x:Key="ImageMenuItemStyle"
+           TargetType="userControls:SearchableMenuItem"
+           BasedOn="{StaticResource BaseMenuItemStyle}">
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <!-- Example: hover background -->
+                <Setter Property="Background" Value="LightGray"/>
+                <Setter Property="BorderBrush" Value="DarkGray"/>
             </Trigger>
         </Style.Triggers>
     </Style>
