--- a/Arcanum.UI/Components/UserControls/BaseControls/FloatNumericUpDown.xaml
+++ b/Arcanum.UI/Components/UserControls/BaseControls/FloatNumericUpDown.xaml
@@ -6,8 +6,8 @@
              mc:Ignorable = "d"
              d:DesignHeight = "300"
              d:DesignWidth = "300">
-    <Border BorderThickness = "{Binding BorderThickness, RelativeSource={RelativeSource AncestorType=UserControl}}"
-            BorderBrush = "{Binding BorderBrush, RelativeSource={RelativeSource AncestorType=UserControl}}"
+    <Border BorderThickness = "{Binding InnerBorderThickness, RelativeSource={RelativeSource AncestorType=UserControl}}"
+            BorderBrush = "{Binding InnerBorderBrush, RelativeSource={RelativeSource AncestorType=UserControl}}"
             CornerRadius = "2"
             Background = "Transparent">
         <Grid Background = "Transparent">
