Update `BaseWindow` styles and properties:
- Added new dependency properties: `WindowBorderThickness`, `WindowCornerRadius`, `HeaderBorder`, and `BorderBrush` with default values.
- Adjusted `HeaderHeight` default from `30.0` to `32.0` for better layout aesthetics.

--- a/Arcanum.UI/Components/Styles/Base/BaseWindow.xaml
+++ b/Arcanum.UI/Components/Styles/Base/BaseWindow.xaml
@@ -31,6 +31,14 @@
                     Value = "200" />
             <Setter Property = "MinHeight"
                     Value = "100" />
+            <Setter Property = "WindowBorderThickness"
+                    Value = "1" />
+            <Setter Property = "WindowCornerRadius"
+                    Value = "0" />
+            <Setter Property = "HeaderBorder"
+                    Value = "0, 0, 0, 1" />
+            <Setter Property = "BorderBrush"
+                    Value = "{StaticResource DefaultBorderColorBrush}" />
             <Setter Property = "Icon"
                     Value = "/Assets/Logo/ArcanumSimplified.ico" />
             <Setter Property = "WindowChrome.WindowChrome">
