--- a/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
+++ b/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
@@ -15,8 +15,8 @@
                          WindowStartupLocation = "CenterScreen"
                          Background = "{DynamicResource DefaultBackColorBrush}"
                          HeaderBackGroundBrush = "{StaticResource AccentGradientBrush}"
-                         HeaderBorder="0, 0, 0, 2"
-                         HeaderMargin="0, 0, 0, 3">
+                         HeaderBorder = "0, 0, 0, 2"
+                         HeaderMargin = "0, 0, 0, 3">
 
     <styleClasses:BaseWindow.Resources>
         <ResourceDictionary>
@@ -145,12 +145,16 @@
                         Executed = "TempTestingCommand_OnExecuted"
                         CanExecute = "CommandCanAlwaysExecute" />
 
+        <CommandBinding Command = "mainWindow:MwCommands.ViewINUIObjectsCommand"
+                        Executed = "ViewINUIObjectsCommand_OnExecuted"
+                        CanExecute = "CommandCanAlwaysExecute" />
+
 
         <!-- Command Bindings for Debug Loading Triggers -->
         <CommandBinding Command = "mainWindow:MwCommands.LoadLocationsCommand"
                         Executed = "LoadLocationsCommand_OnExecuted"
                         CanExecute = "CommandCanAlwaysExecute" />
-        
+
         <!-- Command Bindings for Navigation Buttons -->
         <CommandBinding Command = "mainWindow:MwCommands.GoToPreviousINUICommand"
                         Executed = "GoToPreviousINUICommand_Executed"
@@ -165,14 +169,14 @@
         <StackPanel Orientation = "Horizontal">
             <styleClasses:BaseButton Style = "{StaticResource HeaderButtonStyle}"
                                      ToolTip = "Go Back to previous object view"
-                                     Command="mainWindow:MwCommands.GoToPreviousINUICommand"
-                                     behaviors:WindowDrag.IsDoubleClickExclusionZone="True">
+                                     Command = "mainWindow:MwCommands.GoToPreviousINUICommand"
+                                     behaviors:WindowDrag.IsDoubleClickExclusionZone = "True">
                 <Image Source = "../../../Assets/Icons/20x20/GoBack20x20.png" />
             </styleClasses:BaseButton>
             <styleClasses:BaseButton Style = "{StaticResource HeaderButtonStyle}"
                                      ToolTip = "Go Forward to next object view"
-                                     Command="mainWindow:MwCommands.GoToNextINUICommand"
-                                     behaviors:WindowDrag.IsDoubleClickExclusionZone="True">
+                                     Command = "mainWindow:MwCommands.GoToNextINUICommand"
+                                     behaviors:WindowDrag.IsDoubleClickExclusionZone = "True">
                 <Image Source = "../../../Assets/Icons/20x20/GoForward20x20.png" />
             </styleClasses:BaseButton>
 
@@ -327,6 +331,9 @@
                             <Image Source = "../../../Assets/Icons/16x16/WindowFrame16x16.png" />
                         </uc:SearchableMenuItem.Icon>
                     </uc:SearchableMenuItem>
+                    <uc:SearchableMenuItem Header = "View INUI Objects"
+                                           Command = "mainWindow:MwCommands.ViewINUIObjectsCommand" />
+                    <Separator />
                     <uc:SearchableMenuItem Header = "Load Locations"
                                            Command = "mainWindow:MwCommands.LoadLocationsCommand" />
                 </uc:SearchableMenuItem>
@@ -335,16 +342,27 @@
     </styleClasses:BaseWindow.HeaderContent>
 
     <styleClasses:BaseWindow.FooterContent>
-        <StackPanel Orientation = "Horizontal">
-            <TextBlock
-                Text = "{Binding RamUsage,  RelativeSource={RelativeSource AncestorType=styleClasses:BaseWindow}}"
-                Margin = "2, 0"
-                FontFamily = "{StaticResource DefaultMonospacedFont}" />
-            <TextBlock
-                Text = "{Binding CpuUsage,  RelativeSource={RelativeSource AncestorType=styleClasses:BaseWindow}}"
-                Margin = "2, 0"
-                FontFamily = "{StaticResource DefaultMonospacedFont}" />
-        </StackPanel>
+        <Border BorderBrush = "{DynamicResource DefaultBorderColorBrush}"
+                BorderThickness = "0, 1, 0, 0"
+                CornerRadius = "0"
+                Margin = "0"
+                Padding = "0">
+            <StackPanel Orientation = "Horizontal"
+                        Height="19"
+                        Margin="0"
+                        VerticalAlignment = "Bottom">
+                <TextBlock
+                    Text = "{Binding RamUsage,  RelativeSource={RelativeSource AncestorType=styleClasses:BaseWindow}}"
+                    Margin = "2, 0"
+                    FontFamily = "{StaticResource DefaultMonospacedFont}"
+                    VerticalAlignment = "Center" />
+                <TextBlock
+                    Text = "{Binding CpuUsage,  RelativeSource={RelativeSource AncestorType=styleClasses:BaseWindow}}"
+                    Margin = "2, 0"
+                    FontFamily = "{StaticResource DefaultMonospacedFont}"
+                    VerticalAlignment = "Center" />
+            </StackPanel>
+        </Border>
     </styleClasses:BaseWindow.FooterContent>
 
     <Grid>
