--- a/Arcanum.UI/Components/Styles/Specific/TransparentButtonStyle.xaml
+++ b/Arcanum.UI/Components/Styles/Specific/TransparentButtonStyle.xaml
@@ -1,8 +1,7 @@
 ﻿<ResourceDictionary xmlns = "http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Style x:Name = "TransparentButtonStyle"
-           TargetType = "Button">
+    <Style TargetType = "Button">
         <Setter Property = "Background"
                 Value = "{StaticResource DefaultBackColorBrush}" />
         <Setter Property = "Foreground"
