--- a/Arcanum.UI/WpfTesting/ExampleWindow.xaml
+++ b/Arcanum.UI/WpfTesting/ExampleWindow.xaml
@@ -3,9 +3,7 @@
                         xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml"
                         xmlns:d = "http://schemas.microsoft.com/expression/blend/2008"
                         xmlns:mc = "http://schemas.openxmlformats.org/markup-compatibility/2006"
-                        xmlns:userControls = "clr-namespace:Arcanum.UI.Components.UserControls"
                         xmlns:styleClasses = "clr-namespace:Arcanum.UI.Components.StyleClasses"
-                        xmlns:baseControls = "clr-namespace:Arcanum.UI.Components.UserControls.BaseControls"
                         mc:Ignorable = "d"
                         Height = "1020"
                         Width = "1020"
@@ -18,7 +16,7 @@
                   VerticalScrollBarVisibility="Auto"
                   PanningMode="Both"
                   Background="LightGray">
-        <Canvas Name="drawingCanvas" Background="White" Margin="10" MaxHeight="888" MaxWidth="736"
+        <Canvas Name="DrawingCanvas" Background="White" Margin="10" MaxHeight="888" MaxWidth="736"
                 MouseWheel="Window_MouseWheel"
                 MouseDown="Window_MouseDown"
                 MouseUp="Window_MouseUp"
